...
    return (
        <AnimatedPressable
            onPress={handleNextScreen}
            style={[styles.container, buttonAnimationStyle]}
        >
            <Animated.Text style={[styles.text, textAnimationStyle]}>
                Maestro
            </Animated.Text>
        </AnimatedPressable>
    );
}

const styles = StyleSheet.create({
...
